--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "homepage": "https://github.com/rodan0818/mjr-project-data-collection-web#readme",
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "fs-extra": "^10.0.0",
+    "nodemon": "^2.0.7",
+    "uuid": "^8.3.2",
+    "ws": "^7.5.0"
   }
 }
