--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/rodan0818/mjr-project-data-collection-web#readme",
   "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
+  "dependencies": {
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
-    "nodemon": "^2.0.7",
+    "mongodb": "^3.6.9",
     "uuid": "^8.3.2",
     "ws": "^7.5.0"
   }
