--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
+    "jshint": "^2.13.0",
     "mongodb": "^3.6.9",
     "uuid": "^8.3.2",
     "ws": "^7.5.0"
