--- a/package.json
+++ b/package.json
@@ -1,37 +1,21 @@
 {
-  "name": "mjr-project-data-collection-web",
-  "version": "1.0.0",
-  "description": "Simple website for collecting data for the major project nepali speech processing",
-  "main": "server.js",
+  "name": "major-project-website",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "nodemon server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rodan0818/mjr-project-data-collection-web.git"
-  },
-  "keywords": [
-    "nepalispeechprocessing",
-    "nepali",
-    "devanagari"
-  ],
-  "author": "Rodan Ramdam",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rodan0818/mjr-project-data-collection-web/issues"
-  },
-  "homepage": "https://github.com/rodan0818/mjr-project-data-collection-web#readme",
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+    "start": "node app.js"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
     "fs-extra": "^10.0.0",
-    "googleapis": "^39.2.0",
+    "googleapis": "^80.0.0",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
     "mongodb": "^3.6.9",
-    "uuid": "^8.3.2",
-    "ws": "^7.5.0"
+    "morgan": "~1.9.1",
+    "uuidv4": "^6.2.10",
+    "ws": "^7.5.1"
   }
 }
